# saymo

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROGRESS.md  README.md  SECURITY.md  config.example.yaml  config.yaml  install.sh  pyproject.toml  setup.sh  voice_reading_script.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release.yml
.planning/: MILESTONE-AUDIT-v1.0.md  MILESTONE-AUDIT-v1.1.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.4-MILESTONE-AUDIT.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md
.planning/phases/01-latency-baseline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-VERIFICATION.md
.planning/phases/02-catcher-tuning-loop/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/03-sayer-preflight-path/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-VERIFICATION.md
.planning/phases/04-sample-review-workflow/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: F5TTS-VOICE-CLONING.md  OVERVIEW.md  PLUGINS.md  PRD-quick-start.md  PRD-qwen3-tts.md  PRD.md  QUICK-START.md  RVC-VOICE-CLONING.md  VOICE-NATURALNESS.md  VOICE-TRAINING.md  qwen3-tts-tasks.md  voice-identity.md
docs/adr/: 001-fully-local-architecture.md  002-audio-routing-blackhole.md  003-prepare-speak-separation.md  004-voice-cloning-xtts-v2.md  005-auto-mode-parallel-pipeline.md  006-glip-chrome-automation.md  007-task-sources-and-text-generation.md  008-multi-provider-chrome-base.md  README.md
docs/spec/: CONVERSATIONAL-AI-SPEC.md  STT-COMPARISON.md  TTS-COMPARISON.md
saymo/: __init__.py  __main__.py  cli.py  config.py  glip_control.py  reading_text.py  tui.py  wizard.py
saymo/analysis/: addressing.py  answer_cockpit.py  diarization.py  meeting_memory.py  provider_latency.py  response_cache.py  trigger_capture.py  trigger_classifier.py  trigger_readiness.py  trigger_review.py  trigger_sessions.py  turn_detector.py
saymo/audio/: autocalibrate.py  capture.py  devices.py  macos_audio.py  mic_processor.py  multi_play.py  playback.py  recorder.py
saymo/commands/: __init__.py  core.py  tests.py  voice_train.py
saymo/jira_source/: confluence_tasks.py  tasks.py
saymo/obsidian/: daily_notes.py
saymo/plugins/: __init__.py  base.py  confluence.py  confluence_team.py  file_summary.py  jira_simple.py  obsidian.py
saymo/providers/: _chrome_base.py  base.py  factory.py  glip.py  google_meet.py  ms_teams.py  mts_link.py  telegram.py  telemost.py  vk_teams.py  zoom.py
saymo/speech/: composer.py  ollama_composer.py
saymo/stt/: whisper_local.py
saymo/tts/: base.py  coqui_clone.py  dataset.py  f5tts.py  factory.py  macos_say.py  naturalness.py  openai_tts.py  piper_tts.py  prompts.py  quality.py  qwen3_trainer.py  qwen3_tts.py  text_normalizer.py  trainer.py  xtts_rvc.py
saymo/utils/: logger.py
scripts/: add_hotkeys.py  install_f5tts.sh  install_rvc.sh  play_to_glip.py  synthesize_presentation.py  test_qa_pipeline.py  train_rvc.sh
tests/: test_auto_qa_flow.py  test_config.py  test_hotkey_script.py  test_live_tuning_config.py  test_meeting_memory_cli.py  test_playback_fallback.py  test_provider_latency.py  test_takeover_check.py  test_trigger_check.py  test_wizard.py
tests/analysis/: test_addressing.py  test_answer_cockpit.py  test_diarization.py  test_meeting_memory.py  test_response_cache.py  test_trigger_capture.py  test_trigger_classifier.py  test_trigger_readiness.py  test_trigger_review.py  test_trigger_sessions.py  test_turn_detector.py
tests/audio/: test_autocalibrate.py  test_mic_processor.py
tests/jira_source/: test_client_validation.py
tests/speech/: test_intent_classifier.py  test_ollama_composer.py
tests/tts/: test_factory.py  test_qwen3_compute_loss.py  test_text_normalizer.py
(+127 files in other folders)
