[project]
name = "saymo"
version = "0.6.0"
description = "Local AI voice assistant for macOS — speaks in your cloned voice on live calls, fully on-device"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["voice-assistant", "voice-cloning", "local-ai", "ollama", "xtts", "tts", "stt", "llm", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sounddevice>=0.5.0",
    "soundfile>=0.12.0",
    "numpy",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pynput>=1.7.6",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "jira>=3.8.0",
]

[project.optional-dependencies]
tts = [
    "torch>=2.6.0",
    "torchaudio",
    "coqui-tts[codec]",
    "transformers>=4.46,<5",
    "piper-tts",
    "scipy",
]
stt = [
    "faster-whisper>=1.0.0",
]
cloud = [
    "anthropic>=0.43.0",
    "openai>=1.57.0",
    "deepgram-sdk>=3.0.0",
    "aiohttp>=3.9.0",
]
all = [
    "saymo[tts,stt,cloud]",
]

[project.scripts]
saymo = "saymo.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
