[project]
name = "saymo"
version = "0.10.3"
description = "Local AI voice assistant for macOS — speaks in your cloned voice on live calls, fully on-device"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Mikhail Shchegolev" },
]
keywords = [
    "voice-assistant",
    "voice-cloning",
    "local-ai",
    "ollama",
    "xtts",
    "qwen3-tts",
    "tts",
    "stt",
    "llm",
    "agent",
    "macos",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "sounddevice>=0.5.0",
    "soundfile>=0.12.0",
    "numpy",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pynput>=1.7.6",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "jira>=3.8.0",
]

[project.optional-dependencies]
tts = [
    "torch>=2.6.0",
    "torchaudio",
    "coqui-tts[codec]",
    "transformers>=4.46,<5",
    "piper-tts",
    "scipy",
]
apple = [
    "mlx>=0.22.0",
    "mlx-lm>=0.21.0",
    "mlx-audio>=0.1.0",
]
stt = [
    "faster-whisper>=1.0.0",
]
cloud = [
    "anthropic>=0.43.0",
    "openai>=1.57.0",
    "deepgram-sdk>=3.0.0",
    "aiohttp>=3.9.0",
]
all = [
    "saymo[tts,stt,cloud,apple]",
]

[project.scripts]
saymo = "saymo.cli:main"

[project.urls]
Homepage = "https://github.com/mshegolev/saymo"
Repository = "https://github.com/mshegolev/saymo"
Issues = "https://github.com/mshegolev/saymo/issues"
Documentation = "https://github.com/mshegolev/saymo#readme"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["saymo*"]
exclude = ["tests*", "docs*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
